Ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  hello-world
  labels:
    name:  hello-world
spec:
  replicas: 2
  selector:
  matchLabels:
   app:hello
  template:
    metadata:
      labels:
        app:hello
    spec:
      containers:
      - image:  nginx
        name:  hello
       
        ports:
        - containerPort:  80
